# crosscheck

./: .gitignore  DOCUMENTATION.md  MANUAL.md  README.md  ROADMAP.md  api-scanner-info.md  auth_scanner.py  install.sh  pyproject.toml  temp_mail_helper.py
src/: test_notion.py
src/idor_scanner/: __init__.py  advanced_tests.py  bounty_mode.py  cli.py  comparator.py  cookie_import.py  crawler.py  detector.py  discovery.py  graphql_analyzer.py  har_importer.py  http_client.py  jwt_analyzer.py  models.py  poc_generator.py  reporter.py  session.py
tests/: test_comparator.py  test_discovery.py
