[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idor-scanner"
version = "1.0.0"
description = "API Access Control Scanner - Detects IDOR/BOLA vulnerabilities in REST APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Security Researcher" }
]
keywords = ["security", "api", "idor", "bola", "scanner", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.25.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "deepdiff>=6.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
idor-scanner = "idor_scanner.cli:app"

[project.urls]
Homepage = "https://github.com/ruwithma/crosscheck"
Documentation = "https://github.com/ruwithma/crosscheck#readme"
Repository = "https://github.com/ruwithma/crosscheck"

[tool.hatch.build.targets.wheel]
packages = ["src/idor_scanner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
